--- a/index.html
+++ b/index.html
@@ -431,16 +431,11 @@
             </ul>
 
             <h3 data-en="Disclaimer" data-fi="Vastuuvapauslauseke">Disclaimer</h3>
-            <p data-en="
-            This analysis is based on publicly available meeting minutes from the Helsinki City Council between 2021 and 5th February 2025. 
+            <p data-en="This analysis is based on publicly available meeting minutes from the Helsinki City Council between 2nd August 2021 and 5th February 2025. 
             It uses Large Language Models to analyse, classify and summarise speeches and is automated to a large extent. 
             This means that some results may be biased or inaccurate. While every effort has been made to ensure accuracy, the results should be interpreted with caution.
             Especially the Finnish language summaries, as current AI models are not as capable in small languages compared to the good results they show in English. "
-             data-fi="Tämä analyysi perustuu Helsingin kaupunginvaltuuston julkisesti saatavilla oleviin kokouspöytäkirjoihin vuosien 2021 ja 5. helmikuuta 2025 väliseltä ajalta. 
-             Siinä käytetään suuria kielimalleja puheiden analysointiin, luokitteluun ja tiivistämiseen, ja se on pitkälti automatisoitu. 
-             Tämä tarkoittaa, että jotkin tulokset voivat olla puolueellisia tai epätarkkoja. Vaikka tarkkuus on pyritty kaikin tavoin varmistamaan, tuloksia on tulkittava varoen.
-             Erityisesti suomen kielen yhteenvetoihin, sillä nykyiset tekoälymallit eivät ole yhtä kyvykkäitä pienillä kielillä verrattuna englannin kielellä saavutettuihin hyviin tuloksiin."></p>
-
+   data-fi="Tämä analyysi perustuu Helsingin kaupunginvaltuuston julkisesti saatavilla oleviin kokouspöytäkirjoihin ajalta 2. elokuuta 2021 - 5. helmikuuta 2025. Se käyttää suuria kielimalleja puheiden analysointiin, luokitteluun ja tiivistämiseen, ja se on automatisoitu suurelta osin. Tämä tarkoittaa, että jotkin tulokset voivat olla puolueellisia tai epätarkkoja. Vaikka tarkkuuden varmistamiseksi on pyritty kaikin tavoin, tuloksia tulee tulkita varoen. Erityisesti suomenkieliset tiivistelmät, koska nykyiset tekoälymallit eivät ole yhtä tehokkaita pienissä kielissä verrattuna hyviin tuloksiin, joita ne osoittavat englanniksi."></p>
         </div>
 
        <div id="Parties" class="tabcontent">
@@ -496,7 +491,7 @@
             data-fi="Tässä kaaviossa jokainen yksittäinen puhe luokiteltiin ensin yhteen tai useampaan aihepiiriin LLM:n avulla, ja määritettiin kuinka suuri osa puheesta koski kyseistä aihepiiriä. Jos valtuutettu puhui julkisesta liikenteestä ja mainitsi siihen liittyen ympäristönäkökohdat, luokittelu näytti suunnilleen tältä: Julkinen liikenne: 70 %, Ympäristö: 30 %. Kaaviot visualisoivat sitten keskimääräisen aihepainotuksen valtuutetun tai puolueen tasolla. Esimerkiksi arvo 9,6 % ympäristöasioissa tarkoittaa, että noin 9,6 % puhutusta ajasta koski ympäristöasioita. Se yleensä osoittaa, mihin asioihin puolueet tai valtuutetut keskittyvät. Se ei kuitenkaan kerro mitään siitä, mitä on sanottu. Aihepiirit on otettu Kunnallisalan kehittämissäätiön (kaks.fi) tekemästä kyselystä."> topic graphs</p>
 
             <h4 data-en="How do i interpret the Left-Right/Gal-TAN graph?" data-fi="Miten tulkitsen vasemmisto-oikeisto/vihreä-arvot-kaaviota?">galtan graphs</h4>
-            <p data-en="On the party page, this graph shows the left-right and gal-tan positioning of all councillors (and deputies) of the party. 
+            <p data-en="On the party page, this graph shows the left-right and gal-tan positioning of all councillors (and deputies) of the party. Each dot represents a councillor. 
             For each councillor, i combined all their speeches into one document and asked an LLM to score the Councillor on the economic left right axis as well as gal-tan axis. A lower score on the x-axis means they are more left leaning and preferring government intervention in the economy, a higher score means they are more right leaning and prefering a free market.
             The gal-tan axis takes into account their stances on cultural and social issues. A lower score means they tend to be more progressive, open to multiculturalism, environmentalism etc, while a higher score indicates more traditional values, national sovereignty, stricter immigration policies etc. 
             For the Councillor page, each dot represents a single speech."
@@ -505,7 +500,7 @@
              <h4 data-en="How do i interpret the Maps?" data-fi="Miten tulkitsen karttoja?">maps</h4>
              <p data-en="The maps show where the party or councillor got most of their votes from in the 2021 municipal elections. The darker the color, the more votes they got from that area. 
              The data is based on the official election results Statistics Finland. For the Party page, the map shows the % of votes in each district that the party got, for individual Councillors, it shows the absolute number of votes.
-             The map generally visualises where Parties get their votes from and showcase the political and demographic differences between districts quite well. SDP and PS get more votes in Eastern Helsinki, while Vasemmisto tends to do well in and around Kallio, while Kokoomus dominates richer areas such as the downtown parts of Helsinki "
+             The map generally visualises where Parties get their votes from and showcases the political and demographic differences between districts quite well. SDP and PS get more votes in Eastern Helsinki, while Vasemmisto tends to do well in and around Kallio, while Kokoomus dominates richer areas such as the downtown parts of Helsinki. "
               data-fi="Kartat näyttävät, mistä puolue tai valtuutettu sai suurimman osan äänistään vuoden 2021 kunnallisvaaleissa. Mitä tummempi väri, sitä enemmän ääniä he saivat kyseiseltä alueelta. Tiedot perustuvat Tilastokeskuksen virallisiin vaalituloksiin. Puoluesivulla kartta näyttää puolueen saamien äänien prosenttiosuuden kussakin piirissä, yksittäisten valtuutettujen osalta se näyttää äänien absoluuttisen määrän. Kartta visualisoi yleensä, mistä puolueet saavat äänensä, ja tuo esiin poliittiset ja demografiset erot piirien välillä melko hyvin. SDP ja PS saavat enemmän ääniä Itä-Helsingissä, kun taas Vasemmisto menestyy yleensä Kalliossa ja sen ympäristössä, kun taas Kokoomus hallitsee rikkaampia alueita, kuten Helsingin keskusta-alueita."> maps</p>
         
         </div>
