--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <h3>How to get in contact</h3>
                         <p>Have questions, feedback, or suggestions? Please reach out!</p>
                         <div class="contact-info">
-                            <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="www.linkedin.com/in/kpauli">Korbinian Pauli</a></p>
+                            <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/kpauli">Korbinian Pauli</a></p>
                         </div>
                     </div>
                 </div>
