--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- Councillors Page -->
         <section id="councillors" class="page">
             <div class="container">
-                <h2>City Councillors 2021-2025</h2>
+                <h2>City Councillors (2021-2025)</h2>
                 <div class="search-filter-container">
                     <div class="search-container">
                         <input type="text" id="councillor-search" placeholder="Search councillors...">
