--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         <!-- Councillors Page -->
         <section id="councillors" class="page">
             <div class="container">
-                <h2>City Councillors (2021-2025)</h2>
+                <h2>City Councillors</h2>
+                <p class="term-years">Council term 2021-2025</p>
                 <div class="search-filter-container">
                     <div class="search-container">
                         <input type="text" id="councillor-search" placeholder="Search councillors...">
@@ -113,6 +114,7 @@
                 <div class="councillor-grid" id="councillor-grid">
                     <!-- Councillor cards will be populated here via JavaScript -->
                 </div>
+                <p>More Councillors available by searching or filtering by party.</p>
             </div>
             <!-- Councillor Details Modal -->
             <div id="councillor-modal" class="modal">
